fix (style): prevent overlapping of sections
Remove the height `vh` attribute on sections which was causing sections to overlap.

--- a/styles.css
+++ b/styles.css
@@ -92,7 +92,6 @@ main {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: calc(100vh - 9rem);
 }
 
 .section-left {
@@ -150,7 +149,6 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
 #experience h1 {
